k8s/apps/votcha/ingress-rules/votcha-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: votcha-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.votcha.com
    secretName: votcha-tls
  rules:
  - host: www.votcha.com 
    http:
      paths:
      - path: /(api|actuator)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 8090
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
